Bug 1395394: Make refcounting of GradientStops threadsafe for the sake of OMTP. r=mattwoodrow

MozReview-Commit-ID: 3MZ3JTio3EC